--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "@ngrx/effects": "^9.1.0",
     "@ngrx/store": "^9.1.0",
     "bootstrap": "3.3.7",
     "rxjs": "~6.4.0",
